{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "Player",
            "id": "acc7b744-5fad-4216-983d-587d5646c063",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "PassThrough",
                    "id": "6f992b48-1e63-4b3a-bb60-828548bcd5d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "72875db3-424d-479a-853b-8b8e2ee1ecb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "6746065c-ad5d-4aa3-bd8f-7feb3f3f62f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "670daa2c-93da-4b84-a74c-d6e709ebc32e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af80a780-6189-4670-97a2-209a033713d2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df0d994f-03cc-4db9-88df-1f9bb0f85243",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}